--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <h1>Status dos Servidores teste</h1>
+  <h1>Status dos Servidores</h1>
   <div id="status-list">
     <div id="local" class="status offline">Local: Offline</div>
     <!-- Adicione mais servidores aqui se necessário -->
